--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,8 +1,10 @@
 Flask
 flask
 flask-cors
+flask-socketio
 numpy
 torch
-pytube
+yt-dlp
+librosa
 ffmpeg-python==0.2.0
 git+https://github.com/openai/whisper.git
