--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,7 +16,8 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.2.1",
-    "react-scripts": "^3.0.1",
+    "react-scripts": "^5.0.1",
+    "socket.io-client": "^4.7.5",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
@@ -45,7 +46,7 @@
     ]
   },
   "devDependencies": {
-    "postcss": "8.1",
+    "postcss": "^5.0.1",
     "react-router-dom": "^6.24.1",
     "tailwindcss": "^3.4.4"
   }
