--- a/frontend/.env
+++ b/frontend/.env
@@ -1,3 +1,8 @@
 # REACT_APP_API_URL='http://localhost:5000/'
 REACT_APP_API_URL='http://127.0.0.1:5000/'
 SKIP_PREFLIGHT_CHECK=true
+
+# WebSocket Config
+REACT_APP__WS_SERVER_URL='http://localhost:5000'
+REACT_APP__WS_TIMEOUT=10000
+REACT_APP__WS_MAX_RECONNECT_ATTEMPTS= 3;
