--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,7 @@
     "react-dom": "^18.3.1",
     "react-icons": "^5.2.1",
     "react-scripts": "^5.0.1",
+    "recordrtc": "^5.6.2",
     "socket.io-client": "^4.7.5",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
@@ -46,6 +47,7 @@
     ]
   },
   "devDependencies": {
+    "@types/recordrtc": "^5.6.14",
     "postcss": "^8.4.39",
     "react-router-dom": "^6.24.1",
     "tailwindcss": "^3.4.4"
